# StateTableEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  imgui.ini  index.js  package-lock.json  package.json  sample.app
cmake/: AddCatch2.cmake
include/models/: app_table.h  renderable.h  section.h  state.h
include/state_table_editor/models/: app_table.h
include/state_table_editor/utils/: platform_utils.h
include/ui/: application_window.h  console.h
include/utils/: platform_utils.h  string_helpers.h
models/: AppTable.js  Section.js  SwitchState.js
samples/: sample1.app
src/: CMakeLists.txt  app.jsx  index.html  main.cc  main.cpp  main.rs  models.rs
src/__tests__/: App.test.tsx
src/app_table_manager/: CMakeLists.txt
src/app_table_manager/models/: CMakeLists.txt  app_table.cc  app_table.cpp  section.cc  section.cpp  state.cc  state.cpp
src/file_ops/: io.rs
src/main/: fileIO.ts  ipcExample.ts  main.ts  preload.ts
src/models/: AppTable.js  AppTable.test.js  AppTable.ts  Section.js  Section.test.js  SwitchState.js  SwitchState.test.js  SwitchState.ts  app_table.rs  renderable.rs  section.rs  state.rs
src/models/__tests__/: AppTable.test.js  AppTable.test.ts  Section.test.js  SwitchState.test.js  SwitchState.test.ts
src/renderer/: App.css  App.scss  App.tsx  AppFileContext.tsx  index.ejs
src/renderer/Components/: EditableCell.tsx  NavigationBar.tsx
src/renderer/Models/: AppTable.ts  Section.ts  SwitchState.ts
src/renderer/Models/__tests__/: AppTable.test.ts  Section.test.ts  SwitchState.test.ts
src/renderer/Views/: Start.css  Start.tsx  TableView.css  TableView.tsx
src/ui/: CMakeLists.txt  application_window.cc  console.cc
src/utils/: CMakeLists.txt  graph.rs  string_helpers.cc  string_helpers.cpp
src/utils/platform/: CMakeLists.txt
src/utils/platform/windows/: CMakeLists.txt  windows_platform_utils.cc  windows_platform_utils.cpp
test/: CMakeLists.txt
test/app_table_manager_tests/: CMakeLists.txt  app_table.tests.cc  app_table.tests.cpp  section.tests.cc  section.tests.cpp  state.tests.cc  state.tests.cpp  string_helpers.tests.cc  string_helpers.tests.cpp
tests/: AppTable.test.js  Section.test.js  SwitchState.test.js
